[gd_scene load_steps=3 format=2]

[ext_resource path="res://animated_button/AniButton.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "animate"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[node name="AniButton" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animate = SubResource( 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
